added images, restyled navbar

--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup Page</title>
+    
 </head>
 <body>
     <nav>
         <a href="#" class="link-no-image">Gmail</a>
         <a href="#" class="link-no-image">Images</a>
         <a class="link-image">
-            <img serc="" alt="Icon" />
-        </a>
+            <img class="menu-btn" src="./photos/menu.png" alt="menu" />
+         </a>
         <a class="link-image">
-            <img src="" alt="Profile picture"/>
+            <img class="profile-pic" src="./photos/IMG_5755.JPG" alt="Profile picture"/>
         </a>
     </nav>
     <main>
